# metapod

./: .gitignore  CMakeLists.txt
benchmark/: benchmark.hh
data/: simple_arm.urdf  simple_humanoid.config  simple_humanoid.urdf
include/metapod/algos/: chda.hh  crba.hh  diffrnea.hh  hcrba.hh  jac_point.hh  jac_point_chain.hh  main_hda.hh  rnea.hh
include/metapod/models/simple-arm/: body.hh  joint.hh  robot.hh  simple_arm.cc
include/metapod/tools/: bcalc.hh  common.hh  depth_first_visit.hh  fwd.hh  initconf.hh  initnodeidconf.hh  initnufwdDyn.hh  initnufwddyn.hh  jcalc.hh  joint-anyaxis.hh  jointmacros.hh  my_static_assert.hh  print.hh  pseudoInverse.hh  qcalc.hh  rootNodeId_Of_NuFD.hh  rootNode_Of_NuFD.hh  sparseHfromTrackNZs.hh  table.hh
include/metapod/tools/spatial/: cm-anyaxis.hh  cm-fixed.hh  cm-freeflyer.hh  cm-oneaxis.hh  constraintmotion.hh  constraintmotionfwd.hh  motion.hh  rm-aboutyaxis.hh  transform.hh
metapodfromurdf/: CMakeLists.txt
metapodfromurdf/src/: metapodfromurdf.cpp
robotbuilder/src/: robotbuilder.cc  robotbuilder_p.cc  robotbuilder_p.hh  robotmodel.cc  robotmodel.hh
robotbuilder/tpl/: init.in.cc  init.in.hh
tests/: common.hh
tests/data/simple_arm/: bcalc.ref  jac_point.ref  jac_point_chain.ref  nufwddyn.ref  qcalc.ref  torque.conf
tests/data/simple_humanoid/: chdaH.ref  crba.ref  nufwddyn.ref  rnea_H.ref
tests/use_model/: CMakeLists.txt  test_chda.cc  test_crba.cc  test_hcrba.cc  test_initReadTable.cc  test_initnufwddyn.cc  test_misc.cc  test_qcalc.cc  test_rnea.cc  test_transpositions.cc
(+1 files in other folders)
